# Vibe-Trading-Desktop

./: .comet.yaml  .gitignore  CLAUDE.md  README.md  README_ar.md  README_ja.md  README_ko.md  README_zh.md  package-lock.json  pyproject.toml  wiki.md
.github/workflows/: desktop-build.yml  test.yml  wiki-deploy.yml  wiki.yml
agent/: api_server.py  mcp_server.py  requirements.txt
agent/cli/: _legacy.py  main.py
agent/tests/: test_a_stock_data_loader.py  test_a_stock_data_tool.py  test_api_server_optional_deps.py  test_api_server_startup.py  test_cli_runtime_libs.py  test_dependency_metadata.py  test_optional_deps_integration.py  test_shadow_account.py  test_spa_static_files_fallback.py  test_telemetry_api.py  test_telemetry_counters.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: _full_validate.py  _validate_helper.py  build.sh  scan_project_structure.py  validate_document.py
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/placeholder-dist/: index.html
src-tauri/src/: loading.html  main.rs  port.rs  resources.rs  runtime_dir.rs  sidecar.rs  version.rs
src-tauri/tests/: sidecar_tests.rs
wiki/: 01-业务模块-API服务.md  01-业务模块-Agent核心.md  01-业务模块-Swarm多智能体.md  01-业务模块-Tauri桌面壳.md  01-业务模块-交易连接器.md  01-业务模块-前端状态与API.md  01-业务模块-前端组件库.md  01-业务模块-前端页面.md  01-业务模块-回测引擎.md  01-业务模块-因子与Alpha.md  01-业务模块-实盘交易.md  01-业务模块-影子账户.md  01-业务模块-数据加载器.md  02-文件关系-API请求链路.md  02-文件关系-回测执行链路.md  02-文件关系-实盘交易链路.md  02-文件关系-桌面启动链路.md
(+177 files in other folders)
