[package]
name = "vibe-trading-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
